NotificationBadgeWidget: Fix alignment of actions buttons
Making padding equal on either side, and use display:block
to avoid extra space underneath.

Bug: T115052

--- a/modules/ooui/styles/mw.echo.ui.NotificationBadgeWidget.less
+++ b/modules/ooui/styles/mw.echo.ui.NotificationBadgeWidget.less
@@ -16,6 +16,10 @@
 		border-top: 1px solid #DDDDDD;
 		width: 100%;
 
+		> .oo-ui-buttonGroupWidget {
+			display: block;
+		}
+
 		.oo-ui-buttonElement {
 			display: table-cell;
 			white-space: normal;
@@ -32,6 +36,7 @@
 				line-height: 4em;
 				margin: 0;
 				border: 0;
+				padding: 0.5em;
 
 				.oo-ui-iconElement-icon {
 					// HACK: these are absolutely positioned in OOUI, and our line-height: 4em;
